--- a/WKCLIMAD_readme.html
+++ b/WKCLIMAD_readme.html
@@ -245,16 +245,6 @@ div.tocify {
 </div>
 
 
-<pre><code>## Warning: package &#39;visNetwork&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;networkD3&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;network&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;tidygraph&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;ggraph&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;viridis&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;gdtools&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;hrbrthemes&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;shinyjs&#39; was built under R version 4.1.3</code></pre>
-<pre><code>## Warning: package &#39;magick&#39; was built under R version 4.1.3</code></pre>
 <div id="wkclimad-overview" class="section level1">
 <h1>1. WKCLIMAD Overview</h1>
 <p>This repository contains R code and Rdata files for working with WKCLIMAD data and responses. WKCLIMAD is an ICES workshop aimed at exploring how can the short-, medium-, and long-term influences of climate change on aquaculture, fisheries, and ecosystems be accounted for in ICES Advice.</p>
@@ -263,6 +253,10 @@ div.tocify {
 <div id="visualizing-the-results" class="section level1">
 <h1>2. Visualizing the results</h1>
 <p>The interactive shiny() is downloadable by entering the following lines of code into R().</p>
+<!-- ```{r sfint-shiny} -->
+<!-- knitr::include_app("https://kkh2022.shinyapps.io/WKCLIMAD/",  -->
+<!--   height = "900px") -->
+<!-- ``` -->
 <div id="chord-diagram" class="section level2">
 <h2>3. Chord Diagram</h2>
 <!-- ```{r showChoro1,echo=F} -->
